--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
-title:            Balzac
-tagline:          A beautiful theme.
-description:      Describe your website.
-canonical: http://jekyll.gtat.me
+title:            another-sock-which-is-gold
+tagline:          (but it's tough to wash it)
+description:      It's just a sample site to try stuff out
+canonical:        another-sock-which-is-gold.github.io
 
 # Owner/author information
 owner:
-  name:           Cole Townsend
+  name:           Another Sock
   avatar:         avatar.png
-  bio:            "Aesthete & Athlete"
-  email:          cole@coletownsend.com
-  twitter:        twnsndco
-  github:         coletownsend
-  instagram:      ctrunsthis
-  dribbble:       coletownsend
-  disqus:         balzac
-  location:       "Buffalo, NY"
+  bio:            "I'M A GOLD SOCK WHAT ELSE DO YOU WANT"
+  email:          another-sock-which-is-gold@yandex.com
+  #  twitter:        twnsndco
+  #  github:         coletownsend
+  #  instagram:      ctrunsthis
+  #  dribbble:       coletownsend
+  #  disqus:         balzac
+  #  location:       "Buffalo, NY"
   # Plug in your disqus shortname!
 
 tools:
@@ -30,12 +30,6 @@ opengraph:
 links:
   - title: About
     url: /about
-  - title: Github
-    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
-    external: true
-  - title: Cole Who?
-    url: http://coletownsend.com
-    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
